--- a/index.html
+++ b/index.html
@@ -90,9 +90,10 @@
         <div class="container">
             <p>&copy; Computer Science Fall-2021 FYP | BUITEMS SUB CAMPUS MUSLIM BAGH</p>
             <p> G-mail: uisrar325@gmail.com</p>
-            <p>Content No: 03331251398</p>
+            <p>Contact Us: 03331251398</p>
         </div>
     </footer>
 
 </body>
+
 </html>
